add move task (PUT_TASK) and updated to the current state /origin/main
